# code-review-mcp-server

./: .gitignore  LICENSE  README.md  __init__.py  code_review_mcp_server.py  main.py  mcp.json  pyproject.toml  requirements-dev.txt  requirements.txt  senior_mcp_server.py
.github/workflows/: test.yml
tests/: __init__.py  test_common.py  test_tools.py  test_utils.py
tools/: README.md  __init__.py  architecture.py  code_quality.py  code_structure.py  common.py  eslint_tool.py  patch.py  refactor.py  ruff_tool.py  security.py  senior_review.py  shellcheck_tool.py  simplify.py  test_tools.py  tests.py
typings/fastmcp/: __init__.pyi
utils/: README.md  __init__.py  file_helpers.py
